--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
     <div id="bodyBlue">
         
         <div id="frm404">
-            <div id="frmHeader"><h1>Oops! Page Not Found</h1></div>
+            <div id="frmHeader"><h1>Oops! Page not found. Redirecting (5s)</h1></div>
             <div id="line"></div>
             <div id="frmBody"><h1>404</h1></div>
         </div> 
@@ -45,6 +45,7 @@
     </div>
     <div id="footer"></div>
     <script src="js-b6sy8k/footer.js"></script>
+    <script src="js-b6sy8k/404.js"></script>
 </body>
 
 </html>
