--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
     <div id="bodyBlue">
         
         <div id="frm404">
-            <div id="frmHeader"><h1>Oops! Page not found. Redirecting (5s)</h1></div>
+            <div id="frmHeader"><h1>Oops! Page Not Found (5s)</h1></div>
             <div id="line"></div>
             <div id="frmBody"><h1>404</h1></div>
         </div> 
