--- a/404.html
+++ b/404.html
@@ -29,11 +29,14 @@
     </head>
 <body>
     <div id="header">
-        <div id="div3"></div>
+        <div style="display: block;">
+            <div id="div3"></div>
+            <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
+        </div>
         <div id="div1"><img src="img-h6rv2c/logo.png"></div>
         <div id="div2"><img src="img-h6rv2c/rhombus.png"></div>
     </div>
-    <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
+    
     <div id="bodyBlue">
         
         <div id="frm404">
