--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div id="btnLogin" ><h1>Login</h1></div>
                 </div>
                 <div id="line"></div>
-                <div id="frm4"><h1><a href="reset.html">Reset my password</a></h1></div>
+                <div id="frm4"><h1><a href="https://creator.artcademy.ph/reset">Reset my password</a></h1></div>
             </div>
         </div>
     </div>
