--- a/reset.html
+++ b/reset.html
@@ -33,12 +33,13 @@
     <div id="header">
         <div style="display: block;">
             <div id="div3"></div>
-            <div id="divBanner"><p id="pBanner"></p></div>
         </div>
-        <div id="div1"><img src="img-h6rv2c/logo.png"></div>
-        <div id="div2"><img src="img-h6rv2c/rhombus.png"></div>
+        <div style="display: flex; position: fixed; z-index: 10;">
+            <div id="div1"><img src="img-h6rv2c/logo.png"></div>
+            <div id="div2"><img src="img-h6rv2c/rhombus.png"></div>
+        </div>
     </div>
-   
+    <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
     <div id="bodyBlue">
         <div style="width: 360px; height: auto; display: inline-flex; flex-direction: column;  margin: auto;">
             <div id="alertMessage"></div>
