--- a/resources.html
+++ b/resources.html
@@ -36,12 +36,13 @@
     <div id="header">
         <div style="display: block;">
             <div id="div3"><img src = "img-h6rv2c/btnMenu.png" id="btnMenu"></div>
-            <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
         </div>
-        <div id="div1"><img src="img-h6rv2c/logo.png"></div>
-        <div id="div2"><img src="img-h6rv2c/rhombus.png"></div>
+        <div style="display: flex; position: fixed; z-index: 10;">
+            <div id="div1"><img src="img-h6rv2c/logo.png"></div>
+            <div id="div2"><img src="img-h6rv2c/rhombus.png"></div>
+        </div>
     </div>
-    
+    <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
     <div id="bodyBlue">
         <div id="resources">
             <div class="dropHeader">
