--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
     <div id="bodyBlue">
-        <div style="width: 360px; height: auto; display: inline-flex; flex-direction: column;  margin: auto;">
+        <div style="width: 360px; height: auto; display: inline-flex; flex-direction: column;  margin: auto; padding-left: 1em; padding-right: 1em;">
             <div id="alertMessage"></div>
             <div id="frmLogin">
                 <div id="frm1"><h1>Creator Login</h1></div>
