--- a/reset.html
+++ b/reset.html
@@ -41,7 +41,7 @@
     </div>
     <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
     <div id="bodyBlue">
-        <div style="width: 360px; height: auto; display: inline-flex; flex-direction: column;  margin: auto;">
+        <div style="width: 360px; height: auto; display: inline-flex; flex-direction: column;  margin: auto; padding-left: 1em; padding-right: 1em;">
             <div id="alertMessage"></div>
             <div id="frmReset">
                 <div id="frm1"><h1>Reset Password</h1></div>
