--- a/dashboard.html
+++ b/dashboard.html
@@ -52,8 +52,10 @@
                         <img src="img-h6rv2c/btnShow.png" id="btnShow">
                     </div>
                     <div class="bannerLine"></div>
-                    <div id="divMessage">
-                        <h1></h1>
+                    <div style="width: 100%; height: 100%; background-color: red;">
+                        <div id="divMessage">
+                            <h1></h1>
+                        </div>
                     </div>
                 </div>
             </div>
