--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,7 @@
                         <img src="img-h6rv2c/btnShow.png" id="btnShow">
                     </div>
                     <div class="bannerLine"></div>
-                    <div style="width: 100%; height: 100%; background-color: red;">
+                    <div style="width: 100%; height: 100%; background-color: red; margin-bottom: 1em;">
                         <div id="divMessage">
                             <h1></h1>
                         </div>
