--- a/resources.html
+++ b/resources.html
@@ -35,11 +35,11 @@
     
     <div id="header">
         <div style="display: block;">
-            <div id="div3"><img src = "img-h6rv2c/btnMenu.png" id="btnMenu"></div>
+            <div id="div3"><img src = "img-h6rv2c/btnMenu.svg" id="btnMenu"></div>
         </div>
         <div style="display: flex; position: fixed; z-index: 10;">
-            <div id="div1"><img src="img-h6rv2c/logo.png"></div>
-            <div id="div2"><img src="img-h6rv2c/rhombus.png"></div>
+            <div id="div1"><img src="img-h6rv2c/logo.svg"></div>
+            <div id="div2"><img src="img-h6rv2c/rhombus.svg"></div>
         </div>
     </div>
     <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
