--- a/404.html
+++ b/404.html
@@ -33,8 +33,8 @@
             <div id="div3"></div>
         </div>
         <div style="display: flex; position: fixed; z-index: 10;">
-            <div id="div1"><img src="img-h6rv2c/logo.png"></div>
-            <div id="div2"><img src="img-h6rv2c/rhombus.png"></div>
+            <div id="div1"><img src="img-h6rv2c/logo.svg"></div>
+            <div id="div2"><img src="img-h6rv2c/rhombus.svg"></div>
         </div>
     </div>
     <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
