--- a/404.html
+++ b/404.html
@@ -16,12 +16,12 @@
         <meta property="article:section" content="" />
         <meta property="article:tag" content="" />
 
-        <link rel="icon" type="image/x-icon" href="img-h6rv2c/favicon.svg">
+        <link rel="icon" type="image/x-icon" href="https://creator.artcademy.ph/img-h6rv2c/favicon.svg">
 
-        <link rel="preload" href="css-j2bt6x/style.css" as="style">
-        <link rel="stylesheet", href="css-j2bt6x/style.css">
-        <link rel="preload" href="css-j2bt6x/404.css" as="style">
-        <link rel="stylesheet", href="css-j2bt6x/404.css">
+        <link rel="preload" href="https://creator.artcademy.ph/css-j2bt6x/style.css" as="style">
+        <link rel="stylesheet", href="https://creator.artcademy.ph/css-j2bt6x/style.css">
+        <link rel="preload" href="https://creator.artcademy.ph/css-j2bt6x/404.css" as="style">
+        <link rel="stylesheet", href="https://creator.artcademy.ph/css-j2bt6x/404.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,8 +33,8 @@
             <div id="div3"></div>
         </div>
         <div style="display: flex; position: fixed; z-index: 10;">
-            <div id="div1"><img src="img-h6rv2c/logo.svg"></div>
-            <div id="div2"><img src="img-h6rv2c/rhombus.svg"></div>
+            <div id="div1"><img src="https://creator.artcademy.ph/img-h6rv2c/logo.svg"></div>
+            <div id="div2"><img src="https://creator.artcademy.ph/img-h6rv2c/rhombus.svg"></div>
         </div>
     </div>
     <div id="divBanner"><div id="bannerContainer"><p id="pBanner"></p></div></div>
@@ -48,8 +48,8 @@
         
     </div>
     <div id="footer"></div>
-    <script src="js-b6sy8k/footer.js"></script>
-    <script src="js-b6sy8k/404.js"></script>
+    <script src="https://creator.artcademy.ph/js-b6sy8k/footer.js"></script>
+    <script src="https://creator.artcademy.ph/js-b6sy8k/404.js"></script>
 </body>
 
 </html>
