--- a/enrollees.html
+++ b/enrollees.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Artcademy PH | Creator's Portal</title>
+    <title>Creator's Portal | Creator's Portal</title>
         <meta charset="UTF-8">
         <meta name = "viewport" content="width=device-width , initial-scale=1.0">
         <meta name = "keywords" content="">
